tests/lang/compile_fail/concat_mismatch.kojs
a = "hello"
b: Binary = <<1, 2>>
c = a <> b
c.print()
